--- a/todo.txt
+++ b/todo.txt
@@ -2,18 +2,22 @@ version 1
 ---------
 - library-fy
 - wine editing
+    - return from edit should not overwrite anything else except the relevant field
     - goodies from recipe notes
         - 'cancel' empty wine 178 179
-    - saving
-    - loading
-    - more fields: winery, price
+    - year
+    - wine type
+    - flag
+    - region
+    - grape
+    - winery
+    - price
 - wine view
 - wine listing page
     - wine icon per different wine type
     - what text to include: name, winery, year, region, overall rating, price, flag, photo
     - order by flag + rating
     - as per ordering of fields, see other apps for reference
-- convert logger to use .class
 - build initial database and take backup of it to fill it offline
     - get data from internet
     - add sample database to repo
