--- a/todo.txt
+++ b/todo.txt
@@ -26,6 +26,7 @@ version 1
     - header color
     - FileSelectorActivity
     - should reload only changed fields when returning from edit tags
+    - shakespeare
 - replace license protected images
     - launcher
     - wine icon in wine list
