grape editing works

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="prompt_wine_type">Type of wine</string>
     <string name="prompt_flag">To buy or not to buy?</string>
     <string name="btn_contentDescription">[btn]</string>
+    <string name="label_grapes">Grape / Cépage</string>
     <string name="label_aroma">Aroma</string>
     <string name="label_taste">Taste</string>
     <string name="label_aftertaste">Aftertaste</string>
