--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,7 @@ version 1
 ---------
 - library-fy
 - wine view
++ sparkling
 - wine listing page
     - wine icon per different wine type
     - what text to include: name, winery, year, region, overall rating, price, flag, photo
