--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,7 @@ version 1
 - duplicate wine
 - wine listing page
     - wine icon per different wine type
-    - what text to include: name, year, region, overall rating, price, flag
+    - what text to include: name, year, region, overall rating, price
 - generate insert script from local initial database
 - price
 - better launcher icon
@@ -28,6 +28,7 @@ release
 
 version 2
 ---------
+- next-previous wine with swipe right-left
 - wine editing: cancel wine if empty
     - see recipe notes 178 179
 - improved wine list
