--- a/todo.txt
+++ b/todo.txt
@@ -10,19 +10,30 @@ release
 
 next
 ----
-- currency selector
-- default currency setting
 - use light theme for tag editor like in manyquiz
 - redo menu icons for dark bg
 - option to email notes in multiple formats
     - human-friendly
     - csv
     - json
+- UI config
+    region
+    grape
+    aroma rating
+    aroma impressions
+    taste rating
+    taste impressions
+    aftertaste rating
+    aftertaste impressions
+    memo
+    custom tags
 - clean up db related deprecated calls in WineListActivity and others
     - cursor.requery
     - stopManagingCursor
     - startManagingCursor
 - clean up other deprecated calls
+- currency selector
+- default currency setting
 
 
 version 2
