reformatted all res/ files

--- a/winenotes/res/values/strings.xml
+++ b/winenotes/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">Wine Notes</string>
     <string name="fatal_sdcard_required">Oh snap. SD card is not available
         or not writable, and this app cannot work properly like that.
-        This may be improved in an upcoming version.</string>
+        This may be improved in an upcoming version.
+    </string>
     <string name="title_winelist">Wines</string>
     <string name="title_delete_wine">Delete wine</string>
     <string name="title_delete_photo">Delete photo</string>
@@ -18,7 +19,8 @@
     <string name="hint_grape">Merlot, Grenache, &#8230;</string>
     <string name="hint_impressions">Fruity, Sweet, &#8230;</string>
     <string name="note_entering_impressions">Hint: you can add many at once,
-        separated by comma.</string>
+        separated by comma.
+    </string>
     <string name="msg_no_impressions">No impressions. Use the input box above to add some!</string>
     <string name="hint_memo"></string>
     <string name="label_memo">Memo</string>
@@ -42,7 +44,7 @@
     <string name="btn_add">Add</string>
     <string name="btn_ok">OK</string>
     <string name="btn_done">Done</string>
-    <string name="label_impressions">Impressions: </string>
+    <string name="label_impressions">Impressions:</string>
     <string name="label_none">(none)</string>
     <string name="menu_backup">Backup</string>
     <string name="menu_restore">Restore</string>
@@ -54,7 +56,8 @@
     <string name="title_confirm_restore">Restore database</string>
     <string name="confirm_restore">The database will be replaced with the selected file.
         Make sure you took a backup of the current database before doing this.
-        Are you sure to go ahead?</string>
+        Are you sure to go ahead?
+    </string>
     <string name="msg_restore_success">Restored database</string>
     <string name="error_restore_failed">Restore failed</string>
     <string name="error_restore_exception">Restore failed unexpectedly</string>
@@ -63,7 +66,8 @@
     <string name="error_allocating_photo_file">There was an error
         when trying to allocate a file to store the photo.
         We don\'t know how this is possible.
-        Unfortunately you cannot take photos :(</string>
+        Unfortunately you cannot take photos :(
+    </string>
     <string name="prompt_year">Year / Millésime</string>
     <string name="prompt_wine_type">Type of wine</string>
     <string name="prompt_flag">To buy or not to buy?</string>
