--- a/winenotes/res/values/strings.xml
+++ b/winenotes/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="label_aftertaste">Aftertaste</string>
     <string name="label_overall">Overall</string>
 
-    <string name="tag_add">[add]</string>
+    <string name="alt_add">[add]</string>
+    <string name="alt_done">[done]</string>
 
 </resources>
