--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,3 +6,4 @@ v1.1 -- work in progress
 * Removed the pointless Quit menu option
 * Replaced the text buttons with image buttons in tag editor dialogs
 * Fixed the EURO sign
+* Last currency used is remembered and used as default in new wines
