clarified release target in todo

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,25 @@
-next
-----
+release
+-------
 - minor: delete btn_contentDescription
 - minor: change heading background color, using a brand color
+- clean up db related deprecated calls in WineListActivity and others
+    - cursor.requery
+    - stopManagingCursor
+    - startManagingCursor
+    http://developer.android.com/reference/android/app/Activity.html
+    This method was deprecated in API level 11. Use the new CursorLoader class with LoaderManager instead; this is also available on older platforms through the Android compatibility package.
+- clean up other deprecated calls
+- error: 9-patch image malformed
+    "No marked region found along edge."
+    "Found along top edge."
+    btn_default_normal.9.png
+    btn_default_pressed.9.png
+    btn_default_selected.9.png
+- eliminate all warnings
+
+
+next
+----
 - redo menu icons for dark bg
 - make all dialogs bright theme
 - option to email notes in multiple formats
@@ -19,23 +37,9 @@ next
     aftertaste impressions
     memo
     custom tags
-- clean up db related deprecated calls in WineListActivity and others
-    - cursor.requery
-    - stopManagingCursor
-    - startManagingCursor
-    http://developer.android.com/reference/android/app/Activity.html
-    This method was deprecated in API level 11. Use the new CursorLoader class with LoaderManager instead; this is also available on older platforms through the Android compatibility package.
-- clean up other deprecated calls
 - use something more intuitive than a pulldown without label for selecting wine type
     - default type: red
     - default year: current
-- error: 9-patch image malformed
-    "No marked region found along edge."
-    "Found along top edge."
-    btn_default_normal.9.png
-    btn_default_pressed.9.png
-    btn_default_selected.9.png
-- eliminate all warnings
 
 
 version 2
