--- a/winenotes/res/values/strings.xml
+++ b/winenotes/res/values/strings.xml
@@ -86,8 +86,9 @@
     <string name="label_aftertaste">Aftertaste</string>
     <string name="label_overall">Overall</string>
 
-    <string name="btn_contentDescription">[btn]</string>
     <string name="alt_add">[add]</string>
+    <string name="alt_edit">[edit]</string>
+    <string name="alt_save">[save]</string>
     <string name="alt_done">[done]</string>
 
     <string name="default_currency">USD</string>
