--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,3 +9,4 @@ v1.1 -- work in progress
 * Now you can select the currency
 * Last currency used is remembered and used as default in new wines
 * Automatically capitalize wine names
+* Other usability improvements: view wine screen after creating new
