--- a/winenotes/res/values/strings.xml
+++ b/winenotes/res/values/strings.xml
@@ -30,11 +30,11 @@
         separated by comma.
     </string>
     <string name="msg_no_impressions">Use the input box above to add your "impressions".
-        Common qualifiers are built-in, auto-completion helps you enter them easily.
-        New terms that you enter are automatically added to the auto-completion list.</string>
+        Common qualifiers are built-in, autocompletion helps you enter them easily.
+        New terms that you enter are automatically added to the autocompletion list.</string>
     <string name="msg_no_grapes">Use the input box above to add grape names.
-        Common names are built-in, auto-completion helps you enter them easily.
-        New names that you enter are automatically added to the auto-completion list.</string>
+        Common names are built-in, autocompletion helps you enter them easily.
+        New names that you enter are automatically added to the autocompletion list.</string>
     <string name="label_memo">Memo</string>
     <string name="hint_memo">Enter your notes, if any…</string>
     <string name="msg_updated_wine">Updated wine</string>
